🐛 FIX: align items to center

--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -12,7 +12,7 @@ html {
   display: flex;
   flex-flow: column wrap;
   justify-content: flex-start;
-  align-items: stretch;
+  align-items: center;
 }
 
 ul {
